# ADBenchmark

./: .gitignore  CMakeLists.txt  README.md  clean-build.sh  run_tests.sh  setup.sh
analyze/: analyze.py  cpu_info.py  plots.R
benchmark/: CMakeLists.txt
benchmark/adept/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/adolc/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/baseline/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/cppad/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/fastad/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/functor/: functor_base.hpp  log_sum_exp.hpp  matrix_product.hpp  normal_log_pdf.hpp  prod.hpp  prod_iter.hpp  regression.hpp  stochastic_volatility.hpp  sum.hpp  sum_iter.hpp
benchmark/sacado/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/stan/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/util/: check_gradient.hpp  counting_iterator.hpp  stopwatch.hpp
cmake/: dep.cmake  shared_dep.cmake  stan_dep.cmake
docs/data/: log_sum_exp.csv  log_sum_exp_fastad_multirun.csv  matrix_product.csv  normal_log_pdf.csv  prod.csv  prod_iter.csv  regression.csv  stochastic_volatility.csv  sum.csv  sum_iter.csv
docs/data/benchmark_aggs/: log_sum_exp_adept_multirun.csv  log_sum_exp_baseline_multirun.csv  log_sum_exp_cppad_multirun.csv  log_sum_exp_fastad.csv  log_sum_exp_fastad_multirun.csv  log_sum_exp_sacado_multirun.csv  log_sum_exp_stan.csv  log_sum_exp_stan_multirun.csv  matrix_product_adept_multirun.csv  matrix_product_baseline_multirun.csv  matrix_product_cppad_multirun.csv  matrix_product_fastad_multirun.csv  matrix_product_sacado_multirun.csv  matrix_product_stan_multirun.csv  normal_log_pdf_adept_multirun.csv  normal_log_pdf_baseline_multirun.csv  normal_log_pdf_cppad_multirun.csv  normal_log_pdf_fastad_multirun.csv  normal_log_pdf_sacado_multirun.csv  normal_log_pdf_stan_multirun.csv  prod_adept_multirun.csv  prod_baseline_multirun.csv  prod_cppad_multirun.csv  prod_fastad_multirun.csv  prod_iter_adept_multirun.csv  prod_iter_baseline_multirun.csv  prod_iter_cppad_multirun.csv  prod_iter_fastad_multirun.csv  prod_iter_sacado_multirun.csv  prod_iter_stan_multirun.csv  prod_sacado_multirun.csv  prod_stan_multirun.csv  regression_adept_multirun.csv  regression_baseline_multirun.csv  regression_cppad_multirun.csv  regression_fastad_multirun.csv  regression_sacado_multirun.csv  regression_stan_multirun.csv  stochastic_volatility_adept_multirun.csv  stochastic_volatility_baseline_multirun.csv  (+16 more)
docs/data/benchmarks1fa2e271d3ea4f3ec7ca649a7ceb76a42a67624fb96329e6f51a586ba8a5f959_2025_08_28_13_56_25/: README.md  log_sum_exp_adept_multirun.csv  log_sum_exp_baseline_multirun.csv  log_sum_exp_fastad_multirun.csv  log_sum_exp_stan_multirun.csv
docs/data/benchmarks2025_08_29_H11_M13_S06_e5d1981b9e32123a0b42fd70b7fb7fd1e67cab5d015b3de899cd4adc87f241e2/: README.md  regression_adept_multirun.csv  regression_baseline_multirun.csv  regression_cppad_multirun.csv  regression_fastad_multirun.csv  regression_sacado_multirun.csv  regression_stan_multirun.csv
docs/data/benchmarks2025_09_02_H12_M31_S34_05501bb21061f6073fb6ae79820f5e3efd94f6467a4fef329d7be3afeaeaadad/: README.md  log_sum_exp_adept_multirun.csv  log_sum_exp_baseline_multirun.csv  log_sum_exp_cppad_multirun.csv  log_sum_exp_fastad_multirun.csv  log_sum_exp_sacado_multirun.csv  log_sum_exp_stan_multirun.csv  matrix_product_adept_multirun.csv  matrix_product_baseline_multirun.csv  matrix_product_cppad_multirun.csv  matrix_product_fastad_multirun.csv  matrix_product_sacado_multirun.csv  matrix_product_stan_multirun.csv  normal_log_pdf_adept_multirun.csv  normal_log_pdf_baseline_multirun.csv  normal_log_pdf_cppad_multirun.csv  normal_log_pdf_fastad_multirun.csv  normal_log_pdf_sacado_multirun.csv  normal_log_pdf_stan_multirun.csv  prod_adept_multirun.csv  prod_baseline_multirun.csv  prod_cppad_multirun.csv  prod_fastad_multirun.csv  prod_iter_adept_multirun.csv  prod_iter_baseline_multirun.csv  prod_iter_cppad_multirun.csv  prod_iter_fastad_multirun.csv  prod_iter_sacado_multirun.csv  prod_iter_stan_multirun.csv  prod_sacado_multirun.csv  prod_stan_multirun.csv  regression_adept_multirun.csv  regression_baseline_multirun.csv  regression_cppad_multirun.csv  regression_fastad_multirun.csv  regression_sacado_multirun.csv  regression_stan_multirun.csv  stochastic_volatility_adept_multirun.csv  stochastic_volatility_baseline_multirun.csv  stochastic_volatility_cppad_multirun.csv  (+15 more)
